--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,3 +1,11 @@
-<h1>Layout</h1>
+<nav>
+	<h1>Dark Souls 3</h1>
+	<div>
+		<ul>
+			<li><a href="#/dash">Dash</a></li>
+			<li><a href="#/login">Login</a></li>
+		</ul>
+	</div>
+</nav>
 
 <div ui-view></div>
