--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,1 +1,9 @@
 <h1>Login</h1>
+
+<form ng-submit="login(user)">
+	<input type="text" placeholder="Email" ng-model="user.logEmail">
+	<input type="text" placeholder="Password" ng-model="user.logPass">
+	<button>Login</button>
+</form>
+
+<a href="#/register">Register</a>
