--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -4,6 +4,7 @@
 		<ul>
 			<li><a href="#/dash">Dash</a></li>
 			<li><a href="#/login">Login</a></li>
+			<li><a href="#" ng-click="logout()">Logout</a></li>
 		</ul>
 	</div>
 </nav>
