--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,3 +4,24 @@
 body {
   background: #e2ebf3;
 }
+// LAYOUT
+#navLinks > li {
+	list-style: none;
+	display: inline-block;
+	margin-right: 3%;
+}
+
+// BOSSES
+.bosses {
+	display: inline-block;
+	width: 28%;
+	margin: 2%;
+
+	h4 {
+		text-align: center;
+	}
+	img {
+	width: 100%;
+	}
+}
+
