--- a/app/templates/app-core/login.html
+++ b/app/templates/app-core/login.html
@@ -1,9 +1,12 @@
-<h1>Login</h1>
+<div class="layoutForm">
+	<h1>Login</h1>
 
-<form ng-submit="login(user)">
-	<input type="text" placeholder="Email" ng-model="user.logEmail">
-	<input type="text" placeholder="Password" ng-model="user.logPass">
-	<button>Login</button>
-</form>
+	<form ng-submit="login(user)">
+		<input type="text" placeholder="Email" ng-model="user.logEmail">
+		<input type="text" placeholder="Password" ng-model="user.logPass">
+		<button>Login</button>
+	</form>
 
-<a href="#/register">Register</a>
+	<a href="#/register">Register</a>	
+</div>
+
