--- a/app/templates/app-profile/profile.html
+++ b/app/templates/app-profile/profile.html
@@ -1,14 +1,24 @@
-<h3>Profile</h3>
-
-<div ng-repeat="d in data">
-	<h4>{{d.fName}} {{d.lName}}</h4>
-	<h4>{{d.address}}</h4>
-	<h4>{{d.city}}</h4>
-	<h4>{{d.state}}</h4>
-	<h4>{{d.zip}}</h4>
-	<h4>{{d.country}}</h4>
+<div class="profileWrapper">
+	<h3>Profile</h3>
+	<hr>
+	<div ng-repeat="d in data">
+		<div class="left profileInfo">
+			<h5>{{d.fName}} {{d.lName}}</h5>
+			<hr>
+			<h5>{{d.address}}</h5>
+			<hr>
+			<h5>{{d.city}}</h5>
+			<hr>
+			<h5>{{d.state}}</h5>
+			<hr>
+			<h5>{{d.zip}}</h5>
+			<hr>
+			<h5>{{d.country}}</h5>
+		</div>
+		
+		<img ng-src="../img/darkSoulsAvatar.jpg" class="right profileImg">
+	</div>
+	<hr>
+	<button ng-click="editProfile()">Edit Profile</button>	
 
 </div>
-
-
-<button ng-click="editProfile()">Edit Profile</button>
