can edit the user profile

--- a/app/templates/app-bosses/add-boss.html
+++ b/app/templates/app-bosses/add-boss.html
@@ -1,4 +1,4 @@
-<div>
+<div class="layoutForm">
 	<h1>Add a Boss</h1>
 	<form ng-submit="addBoss(boss)">
 		<input type="text" placeholder="Name" required="" ng-model="boss.name">
