can edit the bosses

--- a/app/templates/app-bosses/boss.html
+++ b/app/templates/app-bosses/boss.html
@@ -18,8 +18,8 @@
 
 <hr>
 <div class="layoutBtns">
-	<button>Edit</button>
-	<button class="alert button">Delete</button>	
+	<button ng-click="editBoss(boss.$id)">Edit</button>
+	<button class="alert button" ng-click="deleteBoss(boss.$id)">Delete</button>	
 </div>
 
 <!-- <h4>{{bossid}}</h4> -->
