--- a/sass/main.scss
+++ b/sass/main.scss
@@ -63,15 +63,25 @@ body {
 .bosses {
 	display: inline-block;
 	width: 30%;
-	margin: 1.5%;
+	height: 270px;
+	margin: 1% 1.5%;
+	overflow: hidden;
+	// background: black;
+
+
 
 	h4 {
 		text-align: center;
 		font-size: 1.1em;
+		// color: white;
 
 	}
 	img {
+	display: block;
+	vertical-align: middle;
 	width: 100%;
+	min-height: 210px;
+	max-height: 210px;
 	}
 }
 
