--- a/app/templates/app-core/playground.html
+++ b/app/templates/app-core/playground.html
@@ -1,6 +1,8 @@
 <div class="layoutForm">
 	<form>
-		<input type="text" ng-model="data.name">
-		<input type="text" ng-model="data.age">
+		<input type="text" ng-model="data.name" placeholder="Name">
+		<input type="text" ng-model="data.age" placeholder="Age">
+		<input type="text" ng-model="data.language" placeholder="Language">
+		
 	</form>
 </div>
