can view photos downloaded from firebase

--- a/app/templates/app-core/layout.html
+++ b/app/templates/app-core/layout.html
@@ -1,9 +1,10 @@
 
 <nav>
 	<ul id="navLinks">
-			<li><a href="#/dash">Dash</a></li>
+			<li><a href="#/dash">My Dash</a></li>
 			<li><a href="#/login">Login</a></li>
-			<li><a href="#/profile">Profile</a></li>
+			<li><a href="#/profile">My Profile</a></li>
+			<li><a href="#/photos">My Photos</a></li>
 			<li ><a href="#/bosses">Bosses</a></li>
 			<li><a href="#" ng-click="logout()">Logout</a></li>
 			<li ng-show=""><a href="#/dash"></a></li>
