--- a/app/templates/app-profile/profile.html
+++ b/app/templates/app-profile/profile.html
@@ -15,9 +15,16 @@
 			<hr>
 			<h5>{{d.country}}</h5>
 		</div>	
-		<img ng-src="{{avatar}}" class="right profileImg">
-		<img ng-if="!haveAvatar" ng-src="../img/darkSoulsAvatar.jpg" class="right profileImg">
+		
+		
 	</div>
+		<div ng-if="!haveBio" class="left profileInfo">
+			<h5>Thanks for signing up. Why don't you create a profile.</h5>
+			<i class="fa fa-spinner fa-spin fa-3x fa-fw"></i>
+			<span class="sr-only">Loading...</span>
+		</div>
+		<img ng-if="haveAvatar" ng-src="{{avatar}}" class="right profileImg">
+		<img ng-if="!haveAvatar" ng-src="../img/darkSoulsAvatar.jpg" class="right profileImg">
 	<hr>
 	<button ng-click="editProfile()">Edit Profile</button>	
 
