added a uploader to see when the files is finished

--- a/app/templates/app-profile/photos.html
+++ b/app/templates/app-profile/photos.html
@@ -3,6 +3,6 @@
 	<br><br>
 	<file-upload type="photos"></file-upload>
 </div>
-<div class="layoutForm" ng-repeat="u in url">
+<div class="layoutForm bosses" ng-repeat="u in url">
 	<img ng-src="{{u}}">
 </div>
