--- a/app/templates/app-bosses/add-boss.html
+++ b/app/templates/app-bosses/add-boss.html
@@ -3,6 +3,6 @@
 	<form ng-submit="addBoss(boss)">
 		<input type="text" placeholder="Name" required="" ng-model="boss.name">
 		<input type="text" placeholder="Image Url" required="" ng-model="boss.img">
-		<button>Submit</button>
+		<button class="small button">Submit</button>
 	</form>
 </div>
