--- a/app/templates/app-bosses/edit-boss.html
+++ b/app/templates/app-bosses/edit-boss.html
@@ -3,6 +3,6 @@
 	<form ng-submit="editBoss(boss)">
 		<input type="text" required="" ng-model="boss.name">
 		<input type="text" required="" ng-model="boss.url">
-		<button>Submit</button>
+		<button class="small button">Submit</button>
 	</form>
 </div>
