--- a/app/templates/app-profile/edit-profile.html
+++ b/app/templates/app-profile/edit-profile.html
@@ -9,7 +9,7 @@
 		<input type="text" placeholder="State" ng-model="user.state" required="">
 		<input type="text" placeholder="Zip Code" ng-model="user.zip" required="">
 		<input type="text" placeholder="Country" ng-model="user.country" required="">
-		<button>Submit</button>
+		<button class="small button">Submit</button>
 	</form>
 	<hr>
 </div>
@@ -26,7 +26,7 @@
 		<input type="text" placeholder="State" ng-model="d.state" required="">
 		<input type="text" placeholder="Zip Code" ng-model="d.zip" required="">
 		<input type="text" placeholder="Country" ng-model="d.country" required="">
-		<button>Submit</button>
+		<button class="small button">Submit</button>
 	</form>
 	<hr>
 </div>
@@ -34,6 +34,5 @@
 
 <div class="layoutForm">
 	<h3>Upload your Avatar</h3>
-	<br><br>
 	<file-upload type="avatar"></file-upload>
 </div>
