--- a/app/templates/app-profile/profile.html
+++ b/app/templates/app-profile/profile.html
@@ -26,7 +26,7 @@
 		<img ng-if="haveAvatar" ng-src="{{avatar}}" class="right profileImg">
 		<img ng-if="!haveAvatar" ng-src="../img/darkSoulsAvatar.jpg" class="right profileImg">
 	<hr>
-	<button ng-click="editProfile()">Edit Profile</button>	
+	<button class="small button" ng-click="editProfile()">Edit Profile</button>	
 
 </div>
 
