--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,8 +5,12 @@
 body {
   background: #D2D2C9;
 }
-// SITE LAYOUT
 
+// SITE LAYOUT
+#hr {
+	width: 90%;
+	margin: 0 auto;
+}
 .layoutForm {
 	width: 80%;
 	margin: 0 auto;
@@ -31,6 +35,15 @@ body {
 		display: inline-block;
 		margin-right: 5%;	
 	}
+}
+//FILE-UPLOAD DIRECTIVE
+.fileUploadProgress {
+	display: inline-block;
+	width: 40%;
+}
+.fileUploadInput {
+	display: inline-block;
+	width: 40%;
 }
 // DASH
 #dashBackground {
@@ -60,6 +73,20 @@ body {
 
 
 // BOSSES
+#addBosses {
+	h1 {
+		display: inline-block;
+		vertical-align: middle;
+		margin-right: 3%;
+		
+	}
+	button {
+
+		display: inline-block;
+		
+
+	}
+}
 .bosses {
 	display: inline-block;
 	width: 30%;
@@ -67,6 +94,7 @@ body {
 	margin: 1% 1.5%;
 	overflow: hidden;
 	// background: black;
+
 
 
 
