can view a single image

--- a/app/templates/app-profile/photos.html
+++ b/app/templates/app-profile/photos.html
@@ -3,5 +3,7 @@
 	<file-upload type="photos"></file-upload>
 </div>
 <div class="layoutForm bosses" ng-repeat="u in url">
-	<img ng-src="{{u}}">
+
+
+	<img ng-src="{{u}}" ng-click="singlePhoto(u);">
 </div>
