--- a/app/templates/app-core/layout.html
+++ b/app/templates/app-core/layout.html
@@ -1,15 +1,16 @@
 
 <nav>
-	<ul id="navLinks">
+	<div id="layoutNav">
+		<ul id="navLinks">
 			<li><a href="#/dash">My Dash</a></li>
 			<li><a href="#/profile">My Profile</a></li>
 			<li><a href="#/photos">My Photos</a></li>
 			<li ><a href="#/bosses">Bosses</a></li>
-			<li><a href="#" ng-click="logout()">Logout</a></li>
-			
-	</ul>	
+			<li><a href="#" ng-click="logout()">Logout</a></li>		
+		</ul>	
+	</div>	
 	<hr id="hr">
-
+	<br>
 </nav>
 
 <div ui-view></div>
