--- a/app/templates/app-profile/photo.html
+++ b/app/templates/app-profile/photo.html
@@ -1,3 +1,7 @@
 <div class="layoutForm">
 	<img ng-src="{{url}}">
 </div>
+<hr>
+<div class="layoutBtns">
+	<button class="alert small button" ng-click="deletePhoto(url)">Delete</button>	
+</div>
