--- a/app/templates/app-profile/photos.html
+++ b/app/templates/app-profile/photos.html
@@ -1,9 +1,7 @@
-<div class="layoutForm">
+<div class="layoutPhotos">
 	<h3>Upload your Photos</h3>
 	<file-upload type="photos"></file-upload>
 </div>
 <div class="layoutForm bosses" ng-repeat="u in url">
-
-
 	<img ng-src="{{u}}" ng-click="singlePhoto(u);">
 </div>
