--- a/app/css/main.css
+++ b/app/css/main.css
@@ -8596,12 +8596,17 @@ body {
   .layoutBtns button {
     margin-right: 1%; }
 
-#navLinks {
-  margin: 2% 5%; }
-  #navLinks li {
-    list-style: none;
-    display: inline-block;
-    margin-right: 5%; }
+nav {
+  width: 100%; }
+  nav #layoutNav {
+    width: 100%;
+    display: inline-block; }
+    nav #layoutNav #navLinks {
+      margin: 2% 5%; }
+      nav #layoutNav #navLinks li {
+        list-style: none;
+        display: inline-block;
+        margin-right: 5%; }
 
 .fileUploadProgress {
   display: inline-block;
@@ -8616,7 +8621,49 @@ body {
   width: 100%;
   background-size: 100%;
   background-repeat: no-repeat;
-  height: 900px; }
+  height: 900px;
+  position: relative;
+  -webkit-transition: all 2s ease 2s;
+  transition: all 2s ease 2s; }
+  #dashBackground button {
+    position: absolute;
+    top: 1%;
+    left: 3%;
+    opacity: 0; }
+
+#dashBackground2 {
+  width: 100%;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  height: 900px;
+  position: relative;
+  -webkit-transition: all 2s ease 2s;
+  transition: all 2s ease 2s; }
+  #dashBackground2 button {
+    position: absolute;
+    top: 1%;
+    left: 3%;
+    opacity: 0; }
+
+#dashBackground:hover > button {
+  opacity: 1; }
+
+#dashBackground2:hover > button {
+  opacity: 1; }
+
+#layoutEditDash {
+  width: 80%;
+  margin-top: .5%; }
+  #layoutEditDash h3 {
+    margin-left: 5%; }
+  #layoutEditDash #fileUploadControls {
+    display: inline-block;
+    width: 70%; }
+    #layoutEditDash #fileUploadControls progress {
+      width: 85%; }
+  #layoutEditDash button {
+    display: inline-block;
+    vertical-align: top; }
 
 .profileWrapper {
   width: 80%;
@@ -8630,6 +8677,24 @@ body {
 
 .profileImg {
   width: 40%; }
+
+.layoutProfile {
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 2%; }
+
+.layoutPhotos {
+  width: 90%;
+  margin: 0 auto;
+  margin-top: .5%; }
+  .layoutPhotos #fileUploadControls {
+    display: inline-block;
+    width: 40%; }
+    .layoutPhotos #fileUploadControls progress {
+      width: 85%; }
+  .layoutPhotos button {
+    display: inline-block;
+    vertical-align: top; }
 
 #addBosses h1 {
   display: inline-block;
