--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,7 +6,7 @@ body {
   background: #D2D2C9;
 }
 
-// SITE LAYOUT
+// SITE LAYOUT----------------------------------------
 #hr {
 	width: 90%;
 	margin: 0 auto;
@@ -26,17 +26,29 @@ body {
 
 
 
-// LAYOUT
-#navLinks {
-	margin: 2% 5%;
+// LAYOUT-----------------------------------------
+nav {
+	width: 100%;
 
-	li {
-		list-style: none;
-		display: inline-block;
-		margin-right: 5%;	
+	#layoutNav {
+	width: 100%;
+	display: inline-block;
+
+		#navLinks {
+		margin: 2% 5%;
+
+			li {
+				list-style: none;
+				display: inline-block;
+				margin-right: 5%;	
+			}
+		}
 	}
 }
-//FILE-UPLOAD DIRECTIVE
+
+
+
+//FILE-UPLOAD DIRECTIVE-----------------------------
 .fileUploadProgress {
 	display: inline-block;
 	width: 40%;
@@ -45,16 +57,73 @@ body {
 	display: inline-block;
 	width: 40%;
 }
-// DASH
+// DASH--------------------------------------------
 #dashBackground {
 	background-image: url('../img/darkSoulsBackground.jpg');
 	width: 100%;
 	background-size: 100%;
 	background-repeat: no-repeat;
 	height: 900px;
+	position: relative;
+	-webkit-transition: all 2s ease 2s;
+	transition: all 2s ease 2s;
+	
+	button {
+		position: absolute;
+		top: 1%;
+		left: 3%;
+		opacity: 0;
+		
+	}
 }
 
-//PROFILE
+#dashBackground2 {
+	width: 100%;
+	background-size: 100%;
+	background-repeat: no-repeat;
+	height: 900px;
+	position: relative;
+	-webkit-transition: all 2s ease 2s;
+	transition: all 2s ease 2s;
+	
+	button {
+		position: absolute;
+		top: 1%;
+		left: 3%;
+		opacity: 0;
+		
+	}
+}
+
+#dashBackground:hover > button {
+	opacity: 1;
+}
+#dashBackground2:hover > button {
+	opacity: 1;
+}
+//EDIT DASH-------------------------------------------
+#layoutEditDash {
+	width: 80%;
+	margin-top: .5%;
+
+	h3	{
+		margin-left: 5%;
+	}
+	#fileUploadControls {
+		display: inline-block;
+		width: 70%;
+
+		progress {
+			width: 85%;
+		}
+	}
+	button {
+		display: inline-block;
+		vertical-align: top;	
+	}
+}
+
+//PROFILE-------------------------------------------
 .profileWrapper {
 	width: 80%;
 	margin: 0 auto;
@@ -70,9 +139,37 @@ body {
 .profileImg {
 	width: 40%; 
 }
+//Edit PROFILE--------------------------------------
+.layoutProfile {
+	width: 80%;
+	margin: 0 auto;
+	margin-top: 2%;
+}
+//Photos---------------------------------------------
+.layoutPhotos {
+	width: 90%;
+	margin: 0 auto;
+	margin-top: .5%;
+
+	#fileUploadControls {
+		display: inline-block;
+		width: 40%;
+
+		progress {
+			width: 85%;
+		}
+	}
+
+	button {
+		display: inline-block;
+		vertical-align: top;
+		
+	}
+	
+}
 
 
-// BOSSES
+// BOSSES---------------------------------------------
 #addBosses {
 	h1 {
 		display: inline-block;
@@ -113,7 +210,7 @@ body {
 	}
 }
 
-//BOSS
+//BOSS----------------------------------------------
 .singleBoss {
 	margin: 0 auto;
 	width: 90%;
