fixed dash background and loging out issue

--- a/app/templates/app-core/dash.html
+++ b/app/templates/app-core/dash.html
@@ -1,6 +1,9 @@
-<div ng-show="!haveBackground" id="dashBackground">
+<!-- <div ng-show="!haveBackground" id="dashBackground">
 		<button id="dashBtn" class="small button" ng-click="changeDash();">Change</button>
-</div>
-<div ng-show="haveBackground" id="dashBackground2">
+</div> -->
+<!-- <div ng-show="haveBackground" id="dashBackground2">
+		<button id="dashBtn" class="small button" ng-click="changeDash();">Change</button>
+</div> -->
+<div id="dashBackground2">
 		<button id="dashBtn" class="small button" ng-click="changeDash();">Change</button>
 </div>
