--- a/app/templates/app-profile/photo.html
+++ b/app/templates/app-profile/photo.html
@@ -1,7 +1,8 @@
+<div class="layoutBtns">
+	<button class="default small button" ng-click="goBack('root.photos')">Back</button>
+	<button class="alert small button" ng-click="deletePhoto(url)">Delete</button>
+</div>
 <div class="layoutForm">
 	<img ng-src="{{url}}">
 </div>
 <hr>
-<div class="layoutBtns">
-	<button class="alert small button" ng-click="deletePhoto(url)">Delete</button>	
-</div>
