--- a/sass/main.scss
+++ b/sass/main.scss
@@ -216,3 +216,16 @@ nav {
 	width: 90%;
 }
 
+.layoutBoss {
+	width: 100%;
+	h2 {
+		display: inline-block;
+		margin-right: 3%;
+	}
+	button {
+		display: inline-block;
+		vertical-align: middle;
+		margin-right: 1%;
+	}
+}
+
