--- a/app/templates/app-profile/edit-profile.html
+++ b/app/templates/app-profile/edit-profile.html
@@ -1,4 +1,4 @@
-<div ng-show="data.length <= 0" class="layoutProfile">
+<div ng-show="data.length <= 0" class="layoutEditProfile">
 	<h3>Add Profile</h3>
 	<br>
 	<form ng-submit="addProfile(user)">
@@ -15,7 +15,7 @@
 </div>
 
 
-<div ng-show="data.length > 0" class="layoutProfile" ng-repeat="d in data">
+<div ng-show="data.length > 0" class="layoutEditProfile" ng-repeat="d in data">
 	<h3>Edit Profile</h3>
 	<br>
 	<form ng-submit="editProfile(d)">
@@ -32,7 +32,7 @@
 </div>
 
 
-<div class="layoutProfile">
+<div class="layoutAvatar">
 	<h3>Upload your Avatar</h3>
-	<file-upload type="avatar"></file-upload>
+	<file-upload class="avatarFileUpload" type="avatar"></file-upload>
 </div>
