--- a/app/templates/app-core/chat.html
+++ b/app/templates/app-core/chat.html
@@ -8,3 +8,8 @@
 		<input type="submit" value="Add Message">
 	</form>
 </div>
+
+
+<div class="layoutForm">
+	<pre>{{ messages | json }}</pre>	
+</div>
