--- a/app/templates/app-core/dash.html
+++ b/app/templates/app-core/dash.html
@@ -1,9 +1,3 @@
-<!-- <div ng-show="!haveBackground" id="dashBackground">
-		<button id="dashBtn" class="small button" ng-click="changeDash();">Change</button>
-</div> -->
-<!-- <div ng-show="haveBackground" id="dashBackground2">
-		<button id="dashBtn" class="small button" ng-click="changeDash();">Change</button>
-</div> -->
-<div id="dashBackground2">
+<div id="dashBackground">
 		<button id="dashBtn" class="small button" ng-click="changeDash();">Change</button>
 </div>
