working on being able to delete photos from database and storage a

--- a/app/templates/app-profile/photos.html
+++ b/app/templates/app-profile/photos.html
@@ -5,3 +5,10 @@
 <div class="layoutForm bosses" ng-repeat="u in url">
 	<img ng-src="{{u}}" ng-click="singlePhoto(u);">
 </div>
+
+
+<!-- TEST----------------------------------------->
+<div ng-repeat="obj in nameUrl">
+	<!-- <h3>{{obj.name}}</h3>
+	<h4>{{obj.url}}</h4> -->
+</div>
