--- a/app/templates/app-core/chat.html
+++ b/app/templates/app-core/chat.html
@@ -1,7 +1,10 @@
 <div class="layoutForm">
 	<h2>Chatter Box</h2>
+	<p>
 	<ul>
-		<li ng-repeat="message in messages">{{message.from}}: {{message.content}}</li>
+		<li ng-repeat="message in messages">{{message.from}}: {{message.content}} <a href="" ng-click="messages.$remove(message)">X</a></li>
+		<!-- delete a message using $remove -->
+      	
 	</ul>
 	<form ng-submit="addMessage()">
 		<input type="text" ng-model="message">
@@ -13,3 +16,5 @@
 <div class="layoutForm">
 	<pre>{{ messages | json }}</pre>	
 </div>
+
+
