--- a/app/templates/app-core/login.html
+++ b/app/templates/app-core/login.html
@@ -6,7 +6,8 @@
 		<input type="text" placeholder="Password" ng-model="user.logPass">
 		<button >Login</button>
 	</form>
-
+	<a href="#" ng-click="facebookLogin()">Login with Facebook</a>
+	<br><br>
 	<a href="#/register">Register</a>	
 </div>
 
