--- a/app/templates/app-core/register.html
+++ b/app/templates/app-core/register.html
@@ -7,6 +7,8 @@
 		<input type="text" placeholder="Password" ng-model="user.regPass">
 		<button>Register</button>
 	</form>
+	<a href="#" ng-click="facebookLogin()">Register with Facebook</a>
+	<br><br>
 	<a href="#/login">Login</a>	
 	
 </div>
